adding the balance to the cob

--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,11 @@
         <p id="flywheelRPM"></p>
       </div>
 
+      <div class="balanced">
+        <img id="seesaw" src="./images/Seesaw.png" width="200px" height="200px"></img>
+        <p id="robotBalanced"></p>
+      </div>
+
     <p id="matchTime"><u>Time Left: </u></p>
     <p id="timer"></p>
     <p id="matchPhase"></p>
