--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <body>
 
       <div class="title">
-        <p id="title1">Carter</p>
+        <p id="title1">Cougar</p>
         <p id="title2">Optics</p>
         <p id="title3">Board</p>
       </div>
