--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
     <meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self'">
-    <title>Cougar Optics Board</title>
+    <title>Cougar Optics Display</title>
     <script src="./networktables.js"></script>
     <script src="./renderer.js"></script>
     <link rel="stylesheet" type="text/css" href="./style.css"/>
@@ -13,9 +13,9 @@
     <body>
 
       <div class="title">
-        <p id="title1">Cougar</p>
-        <p id="title2">Optics</p>
-        <p id="title3">Board</p>
+        <p id="title1">Cougar Optics Display</p>
+        <!-- <p id="title2">Optics</p> 
+        <p id="title3">Board</p> -->
       </div>
 
       <div class="angle">
@@ -25,21 +25,38 @@
 
       <p id="driveMode"></p> 
 
-      <div class="flywheel">
+      <!--<div class="flywheel">
         <img id="flywheelDisplay" src="./images/Lemon.png" width="240px" height="240px"></img>
         <p id="flywheelRPM"></p>
-      </div>
+      </div> -->
 
       <div class="balanced">
         <img id="seesaw" src="./images/Seesaw.png" width="200px" height="200px"></img>
         <p id="robotBalanced"></p>
       </div>
 
-    <p id="matchTime"><u>Time Left: </u></p>
+    <p id="matchTime">Time Left</p>
     <p id="timer"></p>
     <p id="matchPhase"></p>
 
+    <div class="apriltag">
+      <img id="apriltag1" src="./images/AT1.png" width="200px" height="200px"></img>
+      <p id="apriltagpic">ID #</p>
+    </div>
+
+    <div id="rectangle"></div>
     <p id="ticks"></p>
+
+    <div class="arrows">
+      <img id="arrow1" src="./images/aerow.png" width="30px" height="30px"></img>
+      <img id="arrow2" src="./images/aerow.png" width="30px" height="30px"></img>
+      <img id="arrow3" src="./images/aerow.png" width="30px" height="30px"></img>
+      <p id="auto-select">Auto-select</p>
+      <p id="speed">Speed</p>
+      <p id="arm-length">Arm-length</p>
+    </div>
+
+  <!--<img id="fish" src="./images/fish-logo.avif" width="50px" height="50px"></img>-->
 
   </body>
 </html>
