--- a/src/index.html
+++ b/src/index.html
@@ -51,9 +51,11 @@
       <img id="arrow1" src="./images/aerow.png" width="30px" height="30px"></img>
       <img id="arrow2" src="./images/aerow.png" width="30px" height="30px"></img>
       <img id="arrow3" src="./images/aerow.png" width="30px" height="30px"></img>
-      <p id="auto-select">Auto-select</p>
-      <p id="speed">Speed</p>
       <p id="arm-length">Arm-length</p>
+      <p id="armvalue">200 CM</p>
+      <p id="speed">Speed</p>
+      <p id="speedvalue">6500 RPM</p>
+      <p id="auto-select">Auto-select</p>
     </div>
 
   <!--<img id="fish" src="./images/fish-logo.avif" width="50px" height="50px"></img>-->
