--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
     <meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self'">
-    <title>Cougar Optics Display</title>
+    <title>Cougar Optics Board</title>
     <script src="./networktables.js"></script>
     <script src="./renderer.js"></script>
     <link rel="stylesheet" type="text/css" href="./style.css"/>
@@ -13,7 +13,7 @@
     <body>
 
       <div class="title">
-        <p id="title1">Cougar Optics Display</p>
+        <p id="title1">Cougar Optics Board</p>
         <!-- <p id="title2">Optics</p> 
         <p id="title3">Board</p> -->
       </div>
@@ -47,7 +47,8 @@
     <div id="rectangle"></div>
     <p id="ticks"></p>
 
-    <div class="arrows">
+    <!--
+      <div class="arrows">
       <img id="arrow1" src="./images/aerow.png" width="30px" height="30px"></img>
       <img id="arrow2" src="./images/aerow.png" width="30px" height="30px"></img>
       <img id="arrow3" src="./images/aerow.png" width="30px" height="30px"></img>
@@ -55,7 +56,48 @@
       <p id="speed">Speed</p>
       <p id="arm-length">Arm-length</p>
     </div>
+    -->
 
+    <div class="dropdown">
+      <p id="auto-select">Auto-select</p>
+      <p id="speed">Speed</p>
+      <p id="arm-length">Arm-length</p>
+      <button class="arrow1"><img id="arrow1" src="./images/aerow.png" width="30px" height="30px"></img></button>
+      <div class="dropdown-content">
+        <a href="#">Link 1</a>
+        <a href="#">Link 2</a>
+        <a href="#">Link 3</a>
+      </div>
+      <button class="arrow2"><img id="arrow2" src="./images/aerow.png" width="30px" height="30px"></img></button>
+      <div class="dropdown-content">
+        <a href="#">Link 4</a>
+        <a href="#">Link 2</a>
+        <a href="#">Link 3</a>
+      </div>
+      <button class="arrow3"><img id="arrow3" src="./images/aerow.png" width="30px" height="30px"></img></button>
+      <div class="dropdown-content">
+        <a href="#">Link 7</a>
+        <a href="#">Link 2</a>
+        <a href="#">Link 3</a>
+      </div>
+    
+  <!--
+      <button onclick="myFunction()" class="arrow2"><img id="arrow2" src="./images/aerow.png" width="30px" height="30px"></img></button>
+      <div id="myDropdown" class="dropdown-content">
+        <a href="#">thing 4</a>
+        <a href="#">thing 5</a>
+        <a href="#">thing 6</a>
+      </div>
+
+      <button onclick="myFunction()" class="arrow3"><img id="arrow3" src="./images/aerow.png" width="30px" height="30px"></img></button>
+      <div id="myDropdown" class="dropdown-content">
+        <a href="#">thing 7</a>
+        <a href="#">thing 8</a>
+        <a href="#">thing 9</a>
+      </div>
+
+    -->
+    
   <!--<img id="fish" src="./images/fish-logo.avif" width="50px" height="50px"></img>-->
 
   </body>
