--- a/src/index.html
+++ b/src/index.html
@@ -66,13 +66,22 @@
     <img id="arrow2" src="./images/dropdownArrow.png" width="30px" height="30px"></img>
     <img id="arrow3" src="./images/dropdownArrow.png" width="30px" height="30px"></img>
 
-    <div class="arrow1">
+    <!--<div class="arrow1">
       <img id="arrow1" src="./images/dropdownArrow.png" width="30px" height="30px"></img>
       <div class="dropdown-content">
         <a href="#">Link 1</a>
         <a href="#">Link 2</a>
         <a href="#">Link 3</a>
       </div>
+    </div>-->
+
+    <div class="arrow1">
+      <img id="arrow1" src="./images/dropdownArrow.png" width="30px" height="30px"></img>
+      <select name="autos" id="autos">
+        <option value="A1">Auto 1</option>
+        <option value="A2">Auto 2</option>
+        <option value="A3">Auto 3</option>
+      </select>
     </div>
     
     <!-- <div class="dropdown2">
