--- a/src/index.html
+++ b/src/index.html
@@ -78,6 +78,7 @@
     <div class="arrow1">
       <img id="arrow1" src="./images/dropdownArrow.png" width="30px" height="30px"></img>
       <select name="autos" id="autos">
+        <option value="A1" selected>Select an auto</option>
         <option value="A1">Auto 1</option>
         <option value="A2">Auto 2</option>
         <option value="A3">Auto 3</option>
