broken ahh laptop

--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,6 @@
 
       <div class="title">
         <p id="title1">Cougar Optics Board</p>
-        <!-- <p id="title2">Optics</p> 
-        <p id="title3">Board</p> -->
       </div>
 
       <div class="angle">
@@ -24,11 +22,6 @@
       </div>
 
       <p id="driveMode"></p> 
-
-      <!--<div class="flywheel">
-        <img id="flywheelDisplay" src="./images/Lemon.png" width="240px" height="240px"></img>
-        <p id="flywheelRPM"></p>
-      </div> -->
 
       <div class="balanced">
         <img id="seesaw" src="./images/Seesaw.png" width="200px" height="200px"></img>
@@ -62,7 +55,9 @@
 
     <p id="auto-select">Auto-select</p>
     <p id="speed">Speed</p>
+    <p id="speedvalue">6500 RPM</p>
     <p id="arm-length">Arm-length</p>
+    <p id="armvalue">200 CM</p>
     <img id="arrow2" src="./images/dropdownArrow.png" width="30px" height="30px"></img>
     <img id="arrow3" src="./images/dropdownArrow.png" width="30px" height="30px"></img>
 
@@ -103,7 +98,7 @@
       </div>
     </div> -->
 
-  <!--<img id="fish" src="./images/fish-logo.avif" width="50px" height="50px"></img>-->
+  <img id="fish" src="./images/fish-logo.avif" width="50px" height="50px"></img>
 
   </body>
 </html>
