--- a/src/index.html
+++ b/src/index.html
@@ -40,35 +40,14 @@
     <div id="rectangle"></div>
     <p id="ticks"></p>
 
-    <!--
-      <div class="arrows">
-      <img id="arrow1" src="./images/aerow.png" width="30px" height="30px"></img>
-      <img id="arrow2" src="./images/aerow.png" width="30px" height="30px"></img>
-      <img id="arrow3" src="./images/aerow.png" width="30px" height="30px"></img>
-      <p id="arm-length">Arm-length</p>
-      <p id="armvalue">200 CM</p>
-      <p id="speed">Speed</p>
-      <p id="speedvalue">6500 RPM</p>
-      <p id="auto-select">Auto-select</p>
-    </div>
-    -->
-
     <p id="auto-select">Auto-select</p>
-    <p id="speed">Speed</p>
-    <p id="speedvalue">6500 RPM</p>
-    <p id="arm-length">Arm-length</p>
-    <p id="armvalue">200 CM</p>
+    <p id="speed">Arm Angle</p>
+    <p id="speedvalue"></p>
+    <p id="arm-length">Arm Length</p>
+    <p id="armvalue" type="text" READONLY></p>
+
     <img id="arrow2" src="./images/dropdownArrow.png" width="30px" height="30px"></img>
     <img id="arrow3" src="./images/dropdownArrow.png" width="30px" height="30px"></img>
-
-    <!--<div class="arrow1">
-      <img id="arrow1" src="./images/dropdownArrow.png" width="30px" height="30px"></img>
-      <div class="dropdown-content">
-        <a href="#">Link 1</a>
-        <a href="#">Link 2</a>
-        <a href="#">Link 3</a>
-      </div>
-    </div>-->
 
     <div class="arrow1">
       <img id="arrow1" src="./images/dropdownArrow.png" width="30px" height="30px"></img>
@@ -79,26 +58,8 @@
         <option value="A3">Auto 3</option>
       </select>
     </div>
-    
-    <!-- <div class="dropdown2">
-      <button class="arrow2"><img id="arrow2" src="./images/dropdownArrow.png" width="30px" height="30px"></img></button>
-      <div class="dropdown-content2">
-        <a href="#">Link 4</a>
-        <a href="#">Link 5</a>
-        <a href="#">Link 6</a>
-      </div>
-    </div>
-    
-    <div class="dropdown3">
-      <button class="arrow3"><img id="arrow3" src="./images/dropdownArrow.png" width="30px" height="30px"></img></button>
-      <div class="dropdown-content3">
-        <a href="#">Link 7</a>
-        <a href="#">Link 8</a>
-        <a href="#">Link 9</a>
-      </div>
-    </div> -->
 
-  <img id="fish" src="./images/fish-logo.avif" width="50px" height="50px"></img>
+  <img id="fish" src="./images/fish-logo-cod-fixed.png" width="70px" height="70px"></img>
 
   </body>
 </html>
