--- a/src/index.html
+++ b/src/index.html
@@ -33,18 +33,24 @@
     <p id="matchPhase"></p>
 
     <div class="apriltag">
-      <img id="apriltag1" src="./images/AT1.png" width="200px" height="200px"></img>
-      <p id="apriltagpic">ID #</p>
+      <!--<img id="apriltag1" src="./images/AT1.png" width="200px" height="200px"></img> -->
+      <img id="apriltagIMG" src="./images/AT1.png" width="200px" height="200px"></img>
+      <p id="apriltagpic" type="text" READONLY></p>
     </div>
 
     <div id="rectangle"></div>
     <p id="ticks"></p>
 
     <p id="auto-select">Auto-select</p>
+
     <p id="speed">Arm Angle</p>
     <p id="speedvalue"></p>
-    <p id="arm-length">Arm Length</p>
-    <p id="armvalue" type="text" READONLY></p>
+
+    <p id="arm-length">Δ Drive Vision</p>
+
+    <p id="deltaX" type="text" READONLY></p>
+    <p id="deltaY" type="text" READONLY></p>
+    <p id="deltaT" type="text" READONLY></p>
 
     <img id="arrow2" src="./images/dropdownArrow.png" width="30px" height="30px"></img>
     <img id="arrow3" src="./images/dropdownArrow.png" width="30px" height="30px"></img>
